<android.support.percent.PercentRelativeLayout
    android:id="@+id/layout_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true"
    tools:context="cz.lhoracek.android.dials.FullscreenActivity">



    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <cz.lhoracek.android.dials.views.RPMView
        android:id="@+id/rpmView_revsGraph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="70%"
        app:layout_marginLeftPercent="0%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="95%"
        app:maxValue="13000"
        app:minValue="0"
        app:scaleColor="@color/scale"
        app:scaleLineColor="@color/scaleLine"
        app:scaleOffColor="@color/scaleOff"
        app:warningColor="@color/controlRed"/>

    <cz.lhoracek.android.dials.views.DialView
        android:id="@+id/dialView_voltage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="25%"
        app:layout_marginLeftPercent="2%"
        app:layout_marginTopPercent="80%"
        app:layout_widthPercent="15%"
        app:maxValue="15.6"
        app:minValue="12"
        app:scaleColor="@color/scale"
        app:scaleOffColor="@color/scaleOff"
        app:title="@string/title_voltage"
        />

    <cz.lhoracek.android.dials.views.DialView
        android:id="@+id/dialView_oilTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="25%"
        app:layout_marginLeftPercent="20%"
        app:layout_marginTopPercent="80%"
        app:layout_widthPercent="15%"
        app:maxValue="150"
        app:minValue="0"
        app:scaleColor="@color/scale"
        app:scaleOffColor="@color/scaleOff"
        app:title="@string/title_oil_temp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_oil_temp"
        android:textAllCaps="true"
        android:textColor="@color/titleColor"
        android:textSize="15dp"
        app:layout_marginLeftPercent="20%"
        app:layout_marginTopPercent="94%"
        app:layout_widthPercent="15%"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_voltage"
        android:textAllCaps="true"
        android:textColor="@color/titleColor"
        android:textSize="15dp"
        app:layout_marginLeftPercent="2%"
        app:layout_marginTopPercent="94%"
        app:layout_widthPercent="15%"
        />

    <cz.lhoracek.android.dials.views.TextViewPlus
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="8"
        android:textColor="@color/scaleOff"
        android:textSize="120dp"
        app:customFont="digital.ttf"
        app:layout_marginLeftPercent="0%"
        app:layout_marginTopPercent="2%"
        app:layout_widthPercent="15%"
        />

    <cz.lhoracek.android.dials.views.TextViewPlus
        android:id="@+id/textView_gear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/numberColor"
        android:textSize="120dp"
        app:customFont="digital.ttf"
        app:layout_marginLeftPercent="0%"
        app:layout_marginTopPercent="2%"
        app:layout_widthPercent="15%"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_gear"
        android:textAllCaps="true"
        android:textColor="@color/titleColor"
        android:textSize="15dp"
        app:layout_marginLeftPercent="3%"
        app:layout_marginTopPercent="30%"
        />

    <cz.lhoracek.android.dials.views.TextViewPlus
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:singleLine="true"
        android:text="888"
        android:textColor="@color/scaleOff"
        android:textSize="200dp"
        app:customFont="digital.ttf"
        app:layout_marginLeftPercent="30%"
        app:layout_marginTopPercent="30%"
        app:layout_widthPercent="50%"
        />

    <cz.lhoracek.android.dials.views.TextViewPlus
        android:id="@+id/textView_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/numberColor"
        android:textSize="200dp"
        app:customFont="digital.ttf"
        app:layout_marginLeftPercent="30%"
        app:layout_marginTopPercent="30%"
        app:layout_widthPercent="50%"
        />

    <cz.lhoracek.android.dials.views.TextViewPlus
        android:id="@+id/textView_rpm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView_speed"
        android:gravity="right"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/numberColor"
        android:textSize="40dp"
        android:visibility="invisible"
        app:customFont="digital.ttf"
        app:layout_marginLeftPercent="8%"
        app:layout_marginTopPercent="10%"
        app:layout_widthPercent="25%"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView_rpm"
        android:layout_alignLeft="@id/textView_rpm"
        android:text="@string/unit_rpm"
        android:textAllCaps="true"
        android:textColor="@color/titleColor"
        android:textSize="15dp"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/textView_speed"
        android:layout_alignTop="@id/textView_speed"
        android:layout_marginTop="15dp"
        android:text="@string/unit_speed"
        android:textAllCaps="true"
        android:textColor="@color/titleColor"
        android:textSize="15dp"
        />


    <cz.lhoracek.android.dials.views.BarView
        android:id="@+id/barView_temp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="40%"
        app:layout_marginLeftPercent="93%"
        app:layout_marginTopPercent="5%"
        app:layout_widthPercent="5%"
        app:maxValue="120"
        app:minValue="60"
        app:scaleColor="@color/scale"
        app:scaleOffColor="@color/scaleOff"/>

    <cz.lhoracek.android.dials.views.BarView
        android:id="@+id/barView_fuel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="40%"
        app:layout_marginLeftPercent="93%"
        app:layout_marginTopPercent="55%"
        app:layout_widthPercent="5%"
        app:maxValue="100"
        app:minValue="0"
        app:scaleColor="@color/scale"
        app:scaleOffColor="@color/scaleOff"/>

    <cz.lhoracek.android.dials.views.ControlView
        android:id="@+id/control_lowBeam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:controlIcon="@drawable/lights51"
        app:layout_heightPercent="12%"
        app:layout_marginLeftPercent="64%"
        app:layout_marginTopPercent="83%"
        app:layout_widthPercent="7%"
        app:scaleColor="@color/controlGreen"
        app:scaleOffColor="@color/scaleOff"/>

    <cz.lhoracek.android.dials.views.ControlView
        android:id="@+id/control_highBeam"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:controlIcon="@drawable/lights50"
        app:layout_heightPercent="12%"
        app:layout_marginLeftPercent="72%"
        app:layout_marginTopPercent="83%"
        app:layout_widthPercent="7%"
        app:scaleColor="@color/controlBlue"
        app:scaleOffColor="@color/scaleOff"/>

    <cz.lhoracek.android.dials.views.ControlView
        android:id="@+id/control_ignition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:controlIcon="@drawable/engine2"
        app:layout_heightPercent="12%"
        app:layout_marginLeftPercent="56%"
        app:layout_marginTopPercent="83%"
        app:layout_widthPercent="7%"
        app:scaleColor="@color/controlRed"
        app:scaleOffColor="@color/scaleOff"/>

    <cz.lhoracek.android.dials.views.ControlView
        android:id="@+id/control_neutral"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:controlIcon="@drawable/greek44"
        app:layout_heightPercent="12%"
        app:layout_marginLeftPercent="48%"
        app:layout_marginTopPercent="83%"
        app:layout_widthPercent="7%"
        app:scaleColor="@color/controlGreen"
        app:scaleOffColor="@color/scaleOff"/>

    <cz.lhoracek.android.dials.views.ControlView
        android:id="@+id/control_turn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:controlIcon="@drawable/arrow216"
        app:layout_heightPercent="12%"
        app:layout_marginLeftPercent="40%"
        app:layout_marginTopPercent="83%"
        app:layout_widthPercent="7%"
        app:scaleColor="@color/controlGreen"
        app:scaleOffColor="@color/scaleOff"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@id/barView_temp"
        android:src="@drawable/temperature16"
        android:tint="@color/colorPrimary"
        app:layout_heightPercent="8%"
        app:layout_marginLeftPercent="87%"
        app:layout_widthPercent="5%"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignTop="@id/barView_fuel"
        android:src="@drawable/pump1"
        android:tint="@color/colorPrimary"
        app:layout_heightPercent="8%"
        app:layout_marginLeftPercent="87%"
        app:layout_widthPercent="5%"/>

</android.support.percent.PercentRelativeLayout>
