<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="cz.lhoracek.android.dials.model.DialsModel"/>

        <import type="java.lang.String"/>
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/background"
                                                   android:keepScreenOn="true"
                                                   tools:context=".activity.MainActivity">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.71"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.21"/>
        <!-- The primary full-screen view. This can be replaced with whatever view
             is needed to present your content, e.g. VideoView, SurfaceView,
             TextureView, etc. -->
        <cz.lhoracek.android.dials.views.RPMView android:id="@+id/rpmView_revsGraph"
                                                 android:layout_width="0dp"
                                                 android:layout_height="0dp"
                                                 app:layout_heightPercent="70%"
                                                 app:layout_marginLeftPercent="0%"
                                                 app:layout_marginTopPercent="5%"
                                                 app:layout_widthPercent="95%"
                                                 app:maxValue="13000"
                                                 app:maxWarning="10000"
                                                 app:minValue="0"
                                                 app:scaleColor="@color/scale"
                                                 app:scaleLineColor="@color/scaleLine"
                                                 app:scaleOffColor="@color/scaleOff"
                                                 app:value="@{viewModel.values.rpm ?? 0}"
                                                 app:warningColor="@color/controlRed"/>

        <cz.lhoracek.android.dials.views.DialView android:id="@+id/dialView_voltage"
                                                  android:layout_width="80dp"
                                                  android:layout_height="0dp"
                                                  app:decimals="1"
                                                  app:layout_aspectRatio="100%"
                                                  app:layout_marginLeftPercent="2%"
                                                  app:layout_marginTopPercent="80%"
                                                  app:maxValue="15.6"
                                                  app:maxWarning="14"
                                                  app:minValue="11"
                                                  app:minWarning="12"
                                                  app:scaleColor="@color/scale"
                                                  app:scaleOffColor="@color/scaleOff"
                                                  app:title="@string/title_voltage"
                                                  app:value="@{viewModel.values.voltage ?? .0f}"
                                                  app:warningColor="@color/controlRed"/>

        <cz.lhoracek.android.dials.views.DialView android:id="@+id/dialView_oilTemp"
                                                  android:layout_width="80dp"
                                                  android:layout_height="0dp"
                                                  app:decimals="0"
                                                  app:layout_aspectRatio="100%"
                                                  app:layout_marginLeftPercent="20%"
                                                  app:layout_marginTopPercent="80%"
                                                  app:maxValue="150"
                                                  app:maxWarning="130"
                                                  app:minValue="0"
                                                  app:scaleColor="@color/scale"
                                                  app:scaleOffColor="@color/scaleOff"
                                                  app:title="@string/title_oil_temp"
                                                  app:value="@{viewModel.values.oilTemp ?? .0f}"
                                                  app:warningColor="@color/controlRed"/>


        <cz.lhoracek.android.dials.views.TextViewPlus android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:gravity="center"
                                                      android:maxLines="1"
                                                      android:text="8"
                                                      android:textColor="@color/scaleOff"
                                                      android:textSize="120dp"
                                                      app:customFont="dd.otf"
                                                      app:layout_marginLeftPercent="2%"
                                                      app:layout_marginTopPercent="2%"/>

        <cz.lhoracek.android.dials.views.TextViewPlus android:id="@+id/textView_gear"
                                                      android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:gravity="center"
                                                      android:maxLines="1"
                                                      android:text='@{viewModel.values.gear != null ? String.valueOf(viewModel.values.gear) : ".", default=3}'
                                                      android:textColor="@{viewModel.values.gear != null ? @color/numberColor : @color/controlGreen, default=@color/numberColor}"
                                                      android:textSize="120dp"
                                                      app:customFont="dd.otf"
                                                      app:layout_marginLeftPercent="2%"
                                                      app:layout_marginTopPercent="2%"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/title_gear"
                  android:textAllCaps="true"
                  android:textColor="@color/titleColor"
                  android:textSize="15dp"
                  app:layout_marginLeftPercent="3%"
                  app:layout_marginTopPercent="30%"/>

        <cz.lhoracek.android.dials.views.TextViewPlus android:layout_width="0dp"
                                                      android:layout_height="wrap_content"
                                                      android:gravity="right"
                                                      android:maxLines="1"
                                                      android:text="888"
                                                      android:textColor="@color/scaleOff"
                                                      android:textSize="200dp"
                                                      app:customFont="dd.otf"
                                                      app:layout_marginLeftPercent="30%"
                                                      app:layout_marginTopPercent="40%"
                                                      app:layout_widthPercent="50%"/>

        <cz.lhoracek.android.dials.views.TextViewPlus android:id="@+id/textView_speed"
                                                      android:layout_width="0dp"
                                                      android:layout_height="wrap_content"
                                                      android:gravity="right"
                                                      android:maxLines="1"
                                                      android:text='@{viewModel.values.speed != null ? String.valueOf(viewModel.values.speed): null}'
                                                      android:textColor="@color/numberColor"
                                                      android:textSize="200dp"
                                                      app:customFont="dd.otf"
                                                      app:layout_marginLeftPercent="30%"
                                                      app:layout_marginTopPercent="40%"
                                                      app:layout_widthPercent="50%"/>


        <cz.lhoracek.android.dials.views.TextViewPlus android:layout_width="0dp"
                                                      android:layout_height="wrap_content"
                                                      android:layout_alignBaseline="@id/textView_speed"
                                                      android:gravity="right"
                                                      android:maxLines="1"
                                                      android:text="88888"
                                                      android:textColor="@color/scaleOff"
                                                      android:textSize="40dp"
                                                      app:customFont="dd.otf"
                                                      app:layout_marginLeftPercent="8%"
                                                      app:layout_marginRightPercent="10%"
                                                      app:layout_marginTopPercent="10%"
                                                      app:layout_widthPercent="25%"/>

        <cz.lhoracek.android.dials.views.TextViewPlus android:id="@+id/textView_rpm"
                                                      android:layout_width="0dp"
                                                      android:layout_height="wrap_content"
                                                      android:layout_alignBaseline="@id/textView_speed"
                                                      android:gravity="right"
                                                      android:maxLines="1"
                                                      android:text="@{viewModel.values.odo != null ? String.valueOf(viewModel.values.odo) : null}"
                                                      android:textColor="@color/numberColor"
                                                      android:textSize="40dp"
                                                      android:visibility="visible"
                                                      app:customFont="dd.otf"
                                                      app:layout_marginLeftPercent="8%"
                                                      app:layout_marginTopPercent="10%"
                                                      app:layout_widthPercent="25%"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignBaseline="@id/textView_rpm"
                  android:layout_alignLeft="@id/textView_rpm"
                  android:text="@string/unit_rpm"
                  android:textAllCaps="true"
                  android:textColor="@color/titleColor"
                  android:textSize="15dp"
                  android:visibility="invisible"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignRight="@id/textView_speed"
                  android:layout_alignTop="@id/textView_speed"
                  android:layout_marginTop="-18dp"
                  android:text="@string/unit_speed"
                  android:textAllCaps="true"
                  android:textColor="@color/titleColor"
                  android:textSize="15dp"/>


        <cz.lhoracek.android.dials.views.BarView android:id="@+id/barView_temp"
                                                 android:layout_width="0dp"
                                                 android:layout_height="0dp"
                                                 app:layout_heightPercent="40%"
                                                 app:layout_marginLeftPercent="100%"
                                                 app:layout_marginTopPercent="5%"
                                                 app:layout_widthPercent="5%"
                                                 app:maxValue="120"
                                                 app:maxWarning="95"
                                                 app:minValue="60"
                                                 app:scaleColor="@color/scale"
                                                 app:scaleOffColor="@color/scaleOff"
                                                 app:value="@{viewModel.values.temp ?? .0f}"
                                                 app:warningColor="@color/controlRed"/>

        <cz.lhoracek.android.dials.views.BarView android:id="@+id/barView_fuel"
                                                 android:layout_width="0dp"
                                                 android:layout_height="0dp"
                                                 app:layout_heightPercent="40%"
                                                 app:layout_marginLeftPercent="100%"
                                                 app:layout_marginTopPercent="55%"
                                                 app:layout_widthPercent="5%"
                                                 app:maxValue="100"
                                                 app:minValue="0"
                                                 app:minWarning="20"
                                                 app:scaleColor="@color/scale"
                                                 app:scaleOffColor="@color/scaleOff"
                                                 app:value="@{viewModel.values.fuel ?? .0f}"
                                                 app:warningColor="@color/controlRed"/>

        <cz.lhoracek.android.dials.views.ControlView android:id="@+id/control_lowBeam"
                                                     android:layout_width="0dp"
                                                     android:layout_height="0dp"
                                                     app:controlIcon="@drawable/lights51"
                                                     app:enabled="@{viewModel.values.lowBeam ?? false}"
                                                     app:layout_heightPercent="12%"
                                                     app:layout_marginLeftPercent="64%"
                                                     app:layout_marginTopPercent="83%"
                                                     app:layout_widthPercent="7%"
                                                     app:scaleColor="@color/controlGreen"
                                                     app:scaleOffColor="@color/scaleOff"/>

        <cz.lhoracek.android.dials.views.ControlView android:id="@+id/control_highBeam"
                                                     android:layout_width="0dp"
                                                     android:layout_height="0dp"
                                                     app:controlIcon="@drawable/lights50"
                                                     app:enabled="@{viewModel.values.highBeam ?? false}"
                                                     app:layout_heightPercent="12%"
                                                     app:layout_marginLeftPercent="72%"
                                                     app:layout_marginTopPercent="83%"
                                                     app:layout_widthPercent="7%"
                                                     app:scaleColor="@color/controlBlue"
                                                     app:scaleOffColor="@color/scaleOff"/>

        <ImageView android:layout_width="0dp"
                   android:layout_height="0dp"
                   android:layout_alignBottom="@id/barView_temp"
                   android:src="@drawable/temperature16"
                   android:tint="@color/colorPrimary"
                   app:layout_heightPercent="8%"
                   app:layout_marginLeftPercent="93%"
                   app:layout_widthPercent="5%"/>

        <ImageView android:layout_width="0dp"
                   android:layout_height="0dp"
                   android:layout_alignTop="@id/barView_fuel"
                   android:src="@drawable/pump1"
                   android:tint="@color/colorPrimary"
                   app:layout_heightPercent="8%"
                   app:layout_marginLeftPercent="93%"
                   app:layout_widthPercent="5%"/>

    </android.support.constraint.ConstraintLayout>
</layout>